<resources>
    <string name="app_name">Currency Converter</string>
    <string name="amount_to_convert">Amount To Convert:</string>
    <string name="convert_from">Convert From:</string>
    <string name="convert_to">Convert To:</string>
    <string name="select_country">Select Currency</string>
    <string name="convert_btn">Convert</string>
    <string name="search">Search...</string>
    <string name="history">History</string>
    <string name="title_activity_test">test</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>