<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_purple"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/amountToConvertTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_to_convert"
                android:textAlignment="center"

                android:textSize="20dp" />

            <EditText
                android:id="@+id/amountToConvertValueEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"

                android:ems="20"
                android:hint="0"
                android:inputType="numberDecimal"
                android:text=""
                android:textAlignment="center"


                android:textSize="25dp"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:padding="10dp">


            <TextView
                android:id="@+id/convertFromTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_weight="1"
                android:text="@string/convert_from"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/convertToTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/convert_to"

                android:textSize="18dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"

            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/convert_from_dropdown_menu"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"

                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:hint="@string/select_country"
                    android:text=""

                    android:textSize="18dp"
                    app:drawableEndCompat='@drawable/ic_baseline_arrow_drop_down_24'
                    app:drawableRightCompat='@drawable/ic_baseline_arrow_drop_down_24' />

                />

                <TextView
                    android:id="@+id/convert_to_dropdown_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:hint="@string/select_country"
                    android:text=""

                    android:textSize="18dp"
                    app:drawableEndCompat='@drawable/ic_baseline_arrow_drop_down_24'
                    app:drawableRightCompat='@drawable/ic_baseline_arrow_drop_down_24' />

            </LinearLayout>

            <Button
                android:id="@+id/conversionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:padding="8dp"
                android:text="@string/convert_btn" />

            <TextView
                android:id="@+id/conversionRateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="0"
                android:text=""
                android:textAlignment="center"

                android:textSize="40dp" />

            <Button
                android:id="@+id/historyBtn"
                android:layout_width="149dp"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"


                android:text="@string/history" />


        </LinearLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="119dp"
        android:layout_height="123dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_currency_exchange_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.597">

    </ImageView>


</androidx.constraintlayout.widget.ConstraintLayout>
